added motivations worker

--- a/Ironcrunch/src/components/motivations/data.pug
+++ b/Ironcrunch/src/components/motivations/data.pug
@@ -1,4 +1,5 @@
--  var motivations = [
+-  
+  var motivations = [
     {
       id: 'aggravate_organization',
       text: 'Aggravate Organization',
