--- a/Ironcrunch/src/components/motivations/motivations.styl
+++ b/Ironcrunch/src/components/motivations/motivations.styl
@@ -3,3 +3,35 @@ motivations = aggravate_organization battling carousing commanding cover_my_iden
 for id in motivations
   input.sheet-motivation-{id}:checked ~ div.sheet-motivation-{id}
     display block
+
+.sheet-motivations
+  .repcontainer
+    display flex
+    justify-content space-evenly
+    margin-top 1em
+
+.sheet-motivation
+  width 17em
+  border 2px solid #4C4D4F
+  margin-bottom 1em
+  p
+    font-size 14px
+    line-height 16px
+
+.sheet-motivation-dropdown
+  border 2px solid #4c4d4f
+  background #4c4d4f
+  color #fff
+  text-align center
+  font-weight bold
+  font-variant all-small-caps
+  font-size 18px
+  text-align-last center
+  border-radius 0
+  width inherit
+  padding 0
+  line-height 23px
+  cursor pointer
+
+.sheet-motivation-container
+  padding 0em 1em 1em 1em
