--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -25,7 +25,7 @@
 
 input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
 input[type=radio].sheet-summary:checked ~ div.sheet-summary,
-input[type=radio].sheet-motivations:checked ~ div.sheet-motivations
+input[type=radio].sheet-motivations:checked ~ div.sheet-motivations,
 input[type=radio].sheet-vows:checked ~ div.sheet-vows,
 input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
   display block
