--- a/Ironcrunch/src/pages/character/index.pug
+++ b/Ironcrunch/src/pages/character/index.pug
@@ -6,8 +6,9 @@ include ../../components/nav/character
 
 //- Pages
 include ./summary
-include ./bonds
 include ./vows
+include ./motivations
+include ./bonds
 include ./proficiencies
 
 //- Footer
