--- a/Ironcrunch/src/workers/Ironcrunch.pug
+++ b/Ironcrunch/src/workers/Ironcrunch.pug
@@ -5,3 +5,4 @@ script(type="text/worker")
   include ./scripts/progress.js
   include ./scripts/stats.js
   include ./scripts/ancestry.js
+  include ./scripts/motivations.js
