--- a/Ironcrunch/src/components/motivations/motivations.pug
+++ b/Ironcrunch/src/components/motivations/motivations.pug
@@ -1,29 +1,27 @@
 include ./data
 
 //- TODO: Cusom Motivations
-div.sheet-motivations
-  fieldset.repeating_motivations
-    div.sheet-motivation
-      select(class='sheet-motivation-dropdown' name='attr_motivation_select')
-        option(value='' disabled selected) SELECT
-          each motivation in motivations
-            option(value=motivation.id)=motivation.text
+fieldset.repeating_motivations
+  div.sheet-motivation
+    select(class='sheet-motivation-dropdown' name='attr_motivation_select')
+      option(value='' disabled selected) SELECT
+        each motivation in motivations
+          option(value=motivation.id)=motivation.text
 
-      each motivation in motivations
-        input(
-          type='checkbox'
-          class=`sheet-motivation-${motivation.id} sheet-hide`
-          name=`attr_motivation_${motivation.id}`
-          style=``
-        )
-        div(class=`sheet-motivation sheet-motivation-${motivation.id} sheet-hide`)
-          div(class='sheet-motivation-description')
-            p=motivation.description
-          div(class='sheet-motivation-layer')
-            p=`<strong>Layer 1: </strong>${motivation.layer1}`
-          div(class='sheet-motivation-layer')
-            p=`<strong>Layer 2: </strong>${motivation.layer2}`
-          div(class='sheet-motivation-layer')
-            p=`<strong>Layer 3: </strong>${motivation.layer3}`
-          div(class='sheet-motivation-buyoff')
-            p=`<strong>Buyoff: </strong>${motivation.buyoff}`
+    each motivation in motivations
+      input(
+        type='checkbox'
+        class=`sheet-motivation-${motivation.id} sheet-hide`
+        name=`attr_motivation_${motivation.id}`
+      )
+      div(class=`sheet-motivation-${motivation.id} sheet-motivation-container sheet-hide`)
+        div(class='sheet-motivation-description')
+          p=motivation.description
+        div(class='sheet-motivation-layer')
+          p!=`<strong>Layer 1: </strong>${motivation.layer1}`
+        div(class='sheet-motivation-layer')
+          p!=`<strong>Layer 2: </strong>${motivation.layer2}`
+        div(class='sheet-motivation-layer')
+          p!=`<strong>Layer 3: </strong>${motivation.layer3}`
+        div(class='sheet-motivation-buyoff')
+          p!=`<strong>Buyoff: </strong>${motivation.buyoff}`
