Fixed checkbox styling

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -158,7 +158,7 @@ input.sheet-tab:not(:first-child)::before
 }
 
 /* Fake checkbox */
-input[type="radio"] + span::before,
+label input[type="radio"] + span::before,
 input[type="checkbox"] + span::before
 {
     content: "";
@@ -196,7 +196,7 @@ input[type="checkbox"] + span::before
     background: radial-gradient(#f6f6f6, #dfdfdf);
 }
 
-input[type="radio"]:checked + span::before,
+label input[type="radio"]:checked + span::before,
 input[type="checkbox"]:checked + span::before
 {
     content: "✓";
