Giving the player the possibility to activate/deactivate the tooltips

--- a/Splittermond/Sheet.css
+++ b/Splittermond/Sheet.css
@@ -246,10 +246,10 @@ button[type=roll].sheet-button-dm::before {
 
 .sheet-tooltip {
     outline: none;
-    cursor: help;
+    cursor: help; /* you might want to remove this line */
 }
 .sheet-tooltip strong { line-height: 30px; }
-.sheet-tooltip:hover textarea {
+input.sheet-toggletooltips-inside[value="1"] ~ .sheet-tooltip:hover textarea {
     display: block;
     position: absolute;
 }
