## 1.2.0 - Renamed sheet to `Fading Suns 2nd Edition Revised` from `Fading Suns v2.75` - Added ability to select the characteristic for the roll of a skill on the fly (as opposed to having to select a characteristic beforehand) - Cosmetic fixes

--- a/Fading Suns 2nd Edition Revised/Fading_Suns_2nd_Edition_Revised.css
+++ b/Fading Suns 2nd Edition Revised/Fading_Suns_2nd_Edition_Revised.css
@@ -7,11 +7,21 @@ html,
     box-sizing: border-box;
 }
 
+/*.charsheet {
+    background:url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Fading%20Suns%20v2.75/images/background1.jpg) top left repeat;
+    background-attachment: fixed;
+}*/
+
+.textchatcontainer .inlinerollresult {
+    padding: 0;
+}
+
 input {
     width: auto;
     height: initial;
     padding: 3px;
     margin: 0;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 input [type=text] {
@@ -183,7 +193,6 @@ also need 1 more level in selector or base css will override border */
     color: White;
     background-color: #4a6486;
     width: 100%;
-    padding-top:.25em;
 }
 .sheet-fs-nontable-name.sheet-fs-secondary-table-name,
 .sheet-table-name.sheet-fs-secondary-table-name {
@@ -506,13 +515,23 @@ div.repcontrol {
     border: 1px solid;
     padding: 2px;
     width: 90%;
-    background:url(http://i.imgur.com/BLb0XMU.jpg) top left repeat;
+    /*background:url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Fading%20Suns%20v2.75/images/background1.jpg) top left repeat;*/
+    background: #fff;
+}
+
+.sheet-rolltemplate-fs-GoalRoll .sheet-fs-container .sheet-fs-charactername,
+.sheet-rolltemplate-fs-InitRoll .sheet-fs-container .sheet-fs-charactername,
+.sheet-rolltemplate-fs-d6Roll .sheet-fs-container .sheet-fs-charactername {
+    font-weight: bold;
+    font-size: 0.9em;
+    line-height: 1em;
+    border-bottom: 1px solid black;
 }
 
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-container h1,
 .sheet-rolltemplate-fs-InitRoll .sheet-fs-container h1,
 .sheet-rolltemplate-fs-d6Roll .sheet-fs-container h1 {
-    color: rgb(64, 45, 126);
+    color: #4a6486;
     font-size: 1.1em;
     font-variant: small-caps;
     line-height: 20px;
@@ -522,17 +541,31 @@ div.repcontrol {
 .sheet-rolltemplate-fs-InitRoll .sheet-fs-arrow-right,
 .sheet-rolltemplate-fs-d6Roll .sheet-fs-arrow-right {
     border-bottom: 2px solid transparent;
-    border-left: 200px solid rgb(64, 45, 126);
+    border-left: 200px solid #4a6486;
     border-top: 2px solid transparent;
 }
 
 .sheet-rolltemplate-fs-GoalRoll .inlinerollresult,
-.sheet-rolltemplate-fs-InitRoll .inlinerollresult {
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult,
+.sheet-rolltemplate-fs-d6Roll .inlinerollresult {
     background-color: transparent;
     border: none;
     font-weight: normal;
 }
 
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullcrit,
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult.fullcrit,
+.sheet-rolltemplate-fs-d6Roll .inlinerollresult.fullcrit,
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.importantroll,
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult.importantroll,
+.sheet-rolltemplate-fs-d6Roll .inlinerollresult.importantroll,
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullfail,
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult.fullfail,
+.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullfail {
+    border: none;
+}
+
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult.fullcrit,
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-critsuccess {
     color: #3FB315;
 }
@@ -541,24 +574,14 @@ div.repcontrol {
     color: #205b0b;
 }
 
+
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-failure {
     color: #5b0b0b;
 }
 
+.sheet-rolltemplate-fs-InitRoll .inlinerollresult.fullfail,
 .sheet-rolltemplate-fs-GoalRoll .sheet-fs-critfailure {
     color: #B31515;
-}
-
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullcrit {
-    border: none;
-}
-
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.importantroll {
-    border: none;
-}
-
-.sheet-rolltemplate-fs-GoalRoll .inlinerollresult.fullfail {
-    border: none;
 }
 
 .sheet-fs-w100 {
@@ -617,37 +640,11 @@ div.repcontrol {
     align-self: stretch;
 }
 
-.sheet-fs-col fieldset {
-    width:100%;
-}
-
-.sheet-fs-col .repcontainer {
-    width:100%;
-}
-
-.charsheet .repcontainer .repitem,.charsheet .sheet-repeating-sect .repitem {
-    border: 0;
-    border-radius: 0.3rem;
-    overflow: hidden;
-    display: block;
-    width: 100%;
-}
-
 .sheet-fs-space-evenly {
     width: 100%;
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-}
-
-.sheet-fs-repeating-section {
-    width: 100%;
-    display: inline-flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    border: 1px dotted #ccc;
-    padding: 0.3em;
-    border-radius: 0.3em;
 }
 
 .sheet-fs-small-label2 > input {
@@ -792,7 +789,7 @@ input.sheet-fs-beneficeaffliction {
     font-weight: bold;
 }
 
-.sheet-fs-characteristic input,
+.sheet-fs-characteristic-label,
 .sheet-fs-skill-label {
     margin-left: 3px;
 }
@@ -815,6 +812,10 @@ h2.sheet-fs-clickheader {
 .sheet-fs-table .repcontainer,
 .sheet-fs-table .repitem {
     display: contents;
+}
+
+.repcontainer {
+    width: 100%;
 }
 
 .sheet-fs-table input {
@@ -1024,6 +1025,12 @@ button.sheet-fs-dot:hover,
 button.sheet-fs-dot > span:hover {
     filter: sepia(100%) saturate(100%);
 }
+button[type=roll] {
+    background: #fff;
+}
+button[type=roll]:hover:before {
+    color: #888800;
+}
   
 button.sheet-fs-dot > span {
     width: 8px;
@@ -1055,4 +1062,65 @@ input.sheet-fs-dot[value="18"] ~ button.sheet-fs-gt-18 > span.sheet-fs-checked,
 input.sheet-fs-dot[value="19"] ~ button.sheet-fs-gt-19 > span.sheet-fs-checked,
 input.sheet-fs-dot[value="20"] ~ button.sheet-fs-gt-20 > span.sheet-fs-checked {
     display: none;
+}
+
+.sheet-fs-skill > div.sheet-fs-skill-normal {
+    width:100%;
+    display: inline-flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    align-items: center;
+    justify-content: flex-start;
+    align-self: stretch;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice {
+    display: none;
+}
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice,
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover {
+    position: absolute;
+    z-index: 5;
+    background-color: #ffffff;
+    border-radius: 5px;
+    border: 1px solid rgb(15, 9, 9);
+    padding: 2px;
+    margin-left: 26px;
+    margin-top: 118px; /* prev 41px; */
+    width: max-content;
+    /*background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Fading%20Suns%20v2.75/images/background1.jpg) top left repeat;
+    background-attachment: fixed;*/
+
+    display: grid;
+    grid-auto-flow: row;
+    grid-template-rows: max-content;
+}
+/*
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > label,
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > label,
+*/
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > input,
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > input {
+    height: 25px;
+}
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div,
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(9, max-content);
+}
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div > div:nth-child(3),
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div > div:nth-child(3),
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div > div:nth-child(12),
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div > div:nth-child(12),
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20:hover + div.sheet-fs-skill-roll-characteristic-choice > div > div:nth-child(21),
+.sheet-fs-skill > div.sheet-fs-skill-normal > button.sheet-fs-d20 + div.sheet-fs-skill-roll-characteristic-choice:hover > div > div:nth-child(21) {
+    padding-top: 2px;
+    border-top: 1px solid black;
+    margin-top: 2px;
+}
+div.sheet-fs-skill-roll-characteristic-choice > div > div > label {
+    margin-left: 3px;
 }
