removed roll button box-shadows
Removed the roll20 default box shadow for the rolling buttons. They were invisible over a white background, and unseemly over a colored one, as they apply to the button's box, and not it's internal icon.

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -93,6 +93,11 @@ Go to  <select name="attr_sheetstyle"/> on the sheet HTML to add a new option, w
     min-width: 852px;
 }
 
+.sheet-wrapper button[type=roll]{
+    box-shadow: none;
+}
+
+
 .uneditable-input{
     background-color: white;
 }
