Salvo Overlay Setup
Began set up of the Salvo Overlay with a transparent backgound that ensures that you can see the overlay and not access the underlaying sheet.
Fixed the green on the ship configuration
Fixed the size of the retirment plan box

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -44,7 +44,7 @@ input.sheet-smallCraftSelector:checked ~ div.sheet-smallCraftSheet,
 input.sheet-shipLogSelector:checked ~ div.sheet-shipLogSheet,
 input.sheet-capitalShipSelector:checked ~ div.sheet-capitalShipSheet
 {
-	display: block;
+	display: initial;
 }
 
 
@@ -237,11 +237,12 @@ textarea
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: 100px auto;
-	grid-template-areas: "header" "salvo";
+	grid-template-areas: "header" "sheet";
 }
 
 .sheet-crewmemberSheetGrid
 {
+	grid-area: sheet;
 	width: 900px;
 	display: grid;
 	grid-row-gap: 6px;
@@ -254,6 +255,7 @@ textarea
 
 .sheet-shipSheetGrid
 {
+	grid-area: sheet;
 	width: 900px;
 	display: grid;
 	grid-row-gap: 6px;
@@ -266,10 +268,11 @@ textarea
 
 .sheet-sophontSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/SophontLog.png);
 	background-size: 900px 290px;
 	background-repeat: no-repeat;
-	width: 887px;
+	width: 900px;
 	height: 285px;
 	display: grid;
 	grid-row-gap: 0px;
@@ -283,6 +286,7 @@ textarea
 
 .sheet-compositeSophontSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/compositeSophontLog.png);
 	background-size: 900px 290px;
 	background-repeat: no-repeat;
@@ -300,6 +304,7 @@ textarea
 
 .sheet-swarmSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/swarmLog.png);
 	background-size: 900px 340px;
 	background-repeat: no-repeat;
@@ -317,6 +322,7 @@ textarea
 
 .sheet-droneSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/swarmLog.png);
 	background-size: 900px 340px;
 	background-repeat: no-repeat;
@@ -334,6 +340,7 @@ textarea
 
 .sheet-creatureSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/creatureLog.png);
 	background-size: 900px 285px;
 	background-repeat: no-repeat;
@@ -351,6 +358,7 @@ textarea
 
 .sheet-smallCraftSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/creatureLog.png);
 	background-size: 900px 285px;
 	background-repeat: no-repeat;
@@ -368,6 +376,7 @@ textarea
 
 .sheet-shuttleLogSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/shuttleSquadron.png);
 	background-size: 900px 590px;
 	background-repeat: no-repeat;
@@ -385,6 +394,7 @@ textarea
 
 .sheet-behemothSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/behemoth.png);
 	background-size: 900px 590px;
 	background-repeat: no-repeat;
@@ -402,6 +412,7 @@ textarea
 
 .sheet-shipLogSheetGrid
 {
+	grid-area: sheet;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/shipLog.png);
 	background-size: 900px 590px;
 	background-repeat: no-repeat;
@@ -417,9 +428,9 @@ textarea
 	grid-column-gap: 4px;
 }
 
-
 .sheet-capitalShipSheetGrid
 {
+	grid-area: sheet;
 	width: 900px;
 	height: 585px;
 	display: grid;
@@ -480,14 +491,15 @@ select.sheet-typeSelector
 /* Salvo Widget */
 .sheet-salvo
 {
-	grid-area: salvo;
+	position:absolute;
+	z-index: 10;
 	display: grid;
 	width: 900px;
-	height: 150px;
+	height: 2400px;
 	grid-template-columns: 1fr 80px 1fr;
 	grid-template-rows: 32px 1fr;
 	grid-template-areas: "title title title" "taskDice roller threatDice";
-	background-color: lightgray;
+	background: rgba(255,255,255,0.6)
 }
 
 .sheet-salvoTitle
@@ -532,6 +544,40 @@ select.sheet-typeSelector
 	grid-template-rows: 32px 80px;
 	height: 112px;
 	justify-self: center;
+}
+
+/* Specialty Hidding Functionality */
+option.sheet-specialtyChoice
+{
+	display: none;
+}
+
+input.sheet-cultureSelector:checked ~ option.sheet-cultureSpecialties,
+input.sheet-economySelector:checked ~ option.sheet-economySpecialties,
+input.sheet-interfaceSelector:checked ~ div.sheet-sophontSheet,
+input.sheet-politicSelector:checked ~ div.sheet-compositeSophontSheet,
+input.sheet-sophontolgySelector:checked ~ div.sheet-swarmSheet,
+input.sheet-athleticsSelector:checked ~ div.sheet-creatureSheet,
+input.sheet-fitnessSelector:checked ~ div.sheet-behemothSheet,
+input.sheet-geosciencesSelector:checked ~ div.sheet-droneSheet,
+input.sheet-perceptionSelector:checked ~ div.sheet-shuttleSheet,
+input.sheet-pilotSelector:checked ~ div.sheet-smallCraftSheet,
+input.sheet-biosciencesSelector:checked ~ div.sheet-shipLogSheet,
+input.sheet-fieldDynamicsSelector:checked ~ div.sheet-capitalShipSheet
+{
+	display: block;
+}
+
+/* Tool Hidding Functionality */
+optgroup.sheet-scaleChoice
+{
+	display: none;
+}
+
+input.sheet-awaySelector:checked ~ optgroup.sheet-awayTools,
+input.sheet-spaceSelector:checked ~ optgroup.sheet-spaceTools
+{
+	display: contents;
 }
 
 button[type=roll].sheet-rollButton
@@ -2000,14 +2046,14 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-area: plan;
 	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/Retirement.png);
-	background-size: 720px 390px;
+	background-size: 700px 390px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 4fr 1fr 2fr 15px;
 	grid-template-rows: 24px 1fr;
 	grid-gap: 0px;
 	height: 385px;
-	width: 715px;
+	width: 695px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
@@ -4461,7 +4507,7 @@ input[type=number].sheet-txtfield
 		grid-column: 4 / 8;
 		grid-row: 12 / 12;
 		font-weight: bold;
-		z-index: 10;
+		z-index: 8;
 		padding-left: 17px;
 		padding-top: 3px;
 	}
@@ -4476,7 +4522,7 @@ input[type=number].sheet-txtfield
 		.sheet-ship-block span.sheet-armor-lbl::before
 		{
 			font-weight: bold;
-			z-index: 10;
+			z-index: 8;
 			content: "Armour";
 			margin-left: 19px;
 		}
@@ -4685,7 +4731,7 @@ input[type=number].sheet-txtfield
 
 .sheet-ship-block .sheet-ship-default input[type="checkbox"]
 {
-	z-index: -10;
+	z-index: -8;
 }
 
 .sheet-ship-block .sheet-ship-armor input[type="checkbox"] + span.sheet-armor-x
@@ -4793,7 +4839,7 @@ input[type=number].sheet-txtfield
 /* Green */
 .sheet-inv-color[value*="4"] + .sheet-ship-oct
 {
-	background: linear-gradient( rgba(16, 115, 85, 0.5), rgba(132, 222, 2, 0.5) ), url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/ship-section-grey-oct.png);
+	background: linear-gradient( rgba(16, 115, 85, 0.5), rgba(16, 115, 85, 0.5) ), url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/ship-section-grey-oct.png);
 	background-size: 24px 24px;
 }
 
@@ -4929,7 +4975,7 @@ input[type=number].sheet-txtfield
 /* default insec & artery */
 .sheet-ship-block span.sheet-default
 {
-	z-index: 10;
+	z-index: 8;
 	position: relative;
 	left: -11px;
 }
