--- a/Pendragon-french/Pendragon-french.css
+++ b/Pendragon-french/Pendragon-french.css
@@ -1,3 +1,11 @@
+.charsheet{
+    --pendragon-blue: #16619b;
+}
+
+h2, h3 {
+    color: var(--pendragon-blue);
+}
+
 /* TABS */
 div.sheet-tab-content { display: none; }
 
@@ -147,7 +155,7 @@ div.sheet-tab-content
 
 .sheet-carac3 {
 
-    color: #00B7FF;
+    color: var(--pendragon-blue);
 }
 .charsheet {
     background-image: url("http://freeseamlesstextures.com/images/28-faded-parchment-background-sml.jpg");
@@ -170,15 +178,20 @@ select.sheet-dtype {
 
 }
 
-/* compétences */
-.sheet-comp{
-
+label {
 
 }
-/*.sheet-comp label {
-     display: inline;
 
+input {
+    padding: 0px;
+    width: auto;
+}
 
+hr {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: var(--pendragon-blue);
+    border-top-color: var(--pendragon-blue);
 }
 
 .sheet-comp input, .sheet-comp button,  .sheet-comp checkbox {
@@ -189,105 +202,90 @@ sheet-titre2 {
    width: 120px;
 }
 
-/*tests 2020*/
-.sheet-rolltemplate-wod table {
-    width: 189px;
-    height: 189px;
-    padding: 2px;
-    background: url(http://i.imgur.com/xBk4U1p.jpg) top left;
-    background-size: 189px 189px;
-    background-repeat: no-repeat;
-    font-family: "Courier New", Courier, monospace;
-    font-weight: bold;
-    border-spacing: 0;
+.sheet-trait-label {
+    display:inline-block;
+    width:130px;'
 }
 
-.sheet-rolltemplate-wod th {
-    color: rgb(112, 0, 0);
-    padding: 15px 2px 2px 20px;
-    line-height: 1.2em;
-    font-size: 1.2em;
-    text-align: left;
+.sheet-tiny {
+    font-size: 0.7em;
+    display:inline;
+    padding-right: 2px;
 }
 
-
-.sheet-rolltemplate-wod td {
-    padding-left: 20px;
-    font-size: 1.0em;
-    vertical-align: top;
+.sheet-italic {
+    font-style: italic;
 }
 
-.sheet-rolltemplate-wod .sheet-result {
-    font-size: 1.2em;
-    text-align: center;
-    color: rgb(112, 0, 0);
-    padding-bottom: 20px;
+.sheet-border {
+    border: 1px;
+    border-color: var(--pendragon-blue);
+    border-style: solid;
+    padding: 5px;
 }
 
-.sheet-rolltemplate-wod .inlinerollresult  {
-    background-color: transparent;
-    color: #000000;
-    border: none;
+.sheet-dice-button{
+    width: 15px;
+    height: 15px;
+    display: inline;
+    margin-right: 10px;
 }
 
-.sheet-rolltemplate-wod .inlinerollresult.fullcrit {
-    color: #3FB315;
-    border: none;
+.sheet-field-width-m {
+    width: 80px;
 }
 
-.sheet-rolltemplate-wod .inlinerollresult.fullfail {
-    color: #000000;
-    border: none;
+.repitem {
+    height: 20px;
+    margin-bottom: 6px;
 }
 
-.sheet-rolltemplate-wod .inlinerollresult.importantroll {
-    color: #3FB315;
-    border: none;
-}
   /*rolltemplate pendragon*/
-  .sheet-rolltemplate-pendragon table {
-      width: 80%;
+  .sheet-rolltemplate-pendragon table, .sheet-rolltemplate-pendragon-degats table {
+      width: 95%;
       height: auto;
       padding: 2px;
       margin: 3px;
-      background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTjFIgRZDePX_Z-8nHvv0HVliSoJ-iasYHKIiTXtqrfpsZ7CnIU) top left;
+      background: url(https://i.imgur.com/prSwHKj.jpg) top left;
+      /*background: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Pendragon-french/Images/parchemin.jpg) top left;      */
       background-size: cover;
       background-repeat: no-repeat;
       font-family: "Courier New", Courier, monospace;
       font-weight: bold;
       border-spacing: 0;
   }
-.sheet-rolltemplate-pendragon th {
-    font-size: 1.3em;
-    line-height: 1.5em;
+.sheet-rolltemplate-pendragon th, .sheet-rolltemplate-pendragon-degats th {
+    font-size: 1em;
+    line-height: 1em;
     padding: 10px;
 
 }
 
-.sheet-rolltemplate-pendragon .sheet-padding {
-    padding: 10px;
+.sheet-rolltemplate-pendragon .sheet-padding,  .sheet-rolltemplate-pendragon-degats .sheet-padding{
+    padding: 8px;
 }
 
-.sheet-rolltemplate-pendragon tr {
+.sheet-rolltemplate-pendragon tr, .sheet-rolltemplate-pendragon-degats tr {
     margin-top: 3px;
 }
 
-.sheet-rolltemplate-pendragon td {
+.sheet-rolltemplate-pendragon td, .sheet-rolltemplate-pendragon-degats td {
     padding: 5px;
+    padding-right: 0px;
     margin: 10px 3px 3px;
 }
 
-.sheet-rolltemplate-pendragon  .sheet-padding-top {
+.sheet-rolltemplate-pendragon  .sheet-padding-top, .sheet-rolltemplate-pendragon-degats .sheet-padding-top {
     padding-top: 10px;
     padding-bottom: 0px;
 }
 
-.sheet-rolltemplate-pendragon  .sheet-padding-bottom {
+.sheet-rolltemplate-pendragon  .sheet-padding-bottom, .sheet-rolltemplate-pendragon-degats .sheet-padding-bottom {
     padding-top: 0px;
     padding-bottom: 10px;
 }
 
-.sheet-rolltemplate-pendragon  .sheet-middle {
+.sheet-rolltemplate-pendragon  .sheet-middle, .sheet-rolltemplate-pendragon-degats .sheet-middle {
     text-align: center;
 }
 
@@ -299,12 +297,28 @@ sheet-titre2 {
     color: #0B6623;
 }
 
-.sheet-rolltemplate-pendragon .inlinerollresult {
+.sheet-rolltemplate-pendragon .inlinerollresult, .sheet-rolltemplate-pendragon-degats .inlinerollresult, .sheet-rolltemplate-pendragon-degats .inlinerollresult.fullfail, .sheet-rolltemplate-pendragon-degats .inlinerollresult.fullcrit, .sheet-rolltemplate-pendragon-degats .inlinerollresult.importantroll  {
     background-color: transparent;
     border: none;
     padding: 0;
 }
 
-.sheet-rolltemplate-pendragon .sheet-border_bottom {
+.sheet-rolltemplate-pendragon .sheet-border-bottom, .sheet-rolltemplate-pendragon-degats .sheet-border-bottom {
     border-bottom: 2px solid;
 }
+
+/* sheet worker*/
+.charsheet .sheet-checkbox-religion {
+    display: none;
+}
+
+.sheet-checkbox-religion:checked + label {
+    text-decoration: underline;
+}
+.sheet-checkbox-religion + label {
+    text-decoration: none;
+}
+
+
+
+
