added new pages

--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -162,7 +162,8 @@ textarea
 @import './components/momentum/momentum'
 @import './components/stats/stats'
 @import './components/proficiencies/proficiencies'
-  @import './components/motivations/motivations'
+@import './components/motivations/motivations'
+@import './components/notes/notes'
 
 .sheet-debilities
   margin-bottom: 0px
