--- a/Ironcrunch/src/components/details/character.pug
+++ b/Ironcrunch/src/components/details/character.pug
@@ -12,7 +12,12 @@
             ]
           },
           { id: 'speed', text: 'Speed' },
-          { id: 'resilience', text: 'Resilience' }
+          { 
+            columns: [ 
+              { id: 'resilience', text: 'Resilience' },
+              { id: 'max_load', text: 'Max Load' }
+            ]
+          }
         ],
       },
       { 
