--- a/Ironcrunch/src/components/misses/track.pug
+++ b/Ironcrunch/src/components/misses/track.pug
@@ -9,6 +9,13 @@ div.sheet-misses-track
     each index in track
       select(name=`attr_miss-${index}` class="sheet-progress-input sheet-miss-input")
         +progressBox
+    label.sheet-fulfill-vow LEARN 
+      button(
+        type="roll"
+        class='sheet-hide'
+        name="rollMisses"
+        value="&{template:ironcrunch_progress} {{progress_type=Misses}} {{header=@{character_name} <em>Learn from Faults</em> }} {{progress=[[@{misses-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
+      )    
     input(
       type="text"
       class="sheet-hide"
