--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -2,6 +2,7 @@
   display flex
   justify-content space-evenly
   margin-top 0.5em
+  flex-flow column
 
 .sheet-nav-child
   border 2px solid #4C4D4F
@@ -35,3 +36,5 @@ input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
 .sheet-summary
   margin-top 1em
 
+.sheet-nav-row
+  display flex
