--- a/Ironcrunch/src/components/stats/stats.styl
+++ b/Ironcrunch/src/components/stats/stats.styl
@@ -26,6 +26,10 @@
 input.sheet-stats-input
   border: 2px solid #4C4D4F
   background:#e6e7e8
+  &:focus
+    outline 3px solid #ffdd00
+    outline-offset 0s
+    box-shadow inset 0 0 0 2px
 
 label.sheet-roll-label
   margin 0
