--- a/Ironcrunch/src/components/vows/vows.pug
+++ b/Ironcrunch/src/components/vows/vows.pug
@@ -31,7 +31,7 @@ div.sheet-vows
             type="roll"
             class='sheet-hide'
             name="rollVow"
-            value="&{template:ironcrunch_progress} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{vowname=@{vow_name}}} {{vow=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
+            value="&{template:ironcrunch_progress} {{progress_type=Vow}} {{header=@{character_name} <em>Fulfill Your Vow</em> }} {{progress_name=@{vow_name}}} {{progress=[[@{vow-filled}]]}} {{challenge1=[[d10]]}} {{challenge2=[[d10]]}}"
           )               
         input(
           type="text"
@@ -40,3 +40,6 @@ div.sheet-vows
           value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)"
           disabled
         )
+  h3 Vow Archive
+  fieldset.repeating_vowarchive
+    span(name="attr_vow_name")
