--- a/Ironcrunch/src/components/vows/vows.styl
+++ b/Ironcrunch/src/components/vows/vows.styl
@@ -4,6 +4,10 @@ input.sheet-vow-name
   border-radius: 0
   margin-bottom: 0.2em
   margin-top: 1em
+  &:focus
+    outline 3px solid #ffdd00
+    outline-offset 0s
+    box-shadow inset 0 0 0 2px
 
 .sheet-fulfill-vow:hover,
 .sheet-mark-vow:hover,
