--- a/Ironcrunch/src/roll-templates/mixins/body.pug
+++ b/Ironcrunch/src/roll-templates/mixins/body.pug
@@ -9,8 +9,8 @@ mixin actionBody
     div {{action}}
   +challengeDice
 
-mixin vowBody
+mixin progressBody
   div.sheet-result-body.sheet-result-row
-    div Vow Progress: 
-    div {{vow}}
+    div {{progress_type}} Progress: 
+    div {{progress}}
   +challengeDice
