--- a/Ironcrunch/src/roll-templates/mixins/headers.pug
+++ b/Ironcrunch/src/roll-templates/mixins/headers.pug
@@ -5,6 +5,6 @@ mixin actionHeader
   +subHeader
   div.sheet-roll-name {{name}}
 
-mixin vowHeader
+mixin progressHeader
   +subHeader
-  div.sheet-vow-name {{vowname}} 
+  div.sheet-progress-name {{progress_name}} 
