--- a/Ironcrunch/src/roll-templates/progress/progress.pug
+++ b/Ironcrunch/src/roll-templates/progress/progress.pug
@@ -4,33 +4,33 @@ include ../mixins/outcomes
 
 rolltemplate.sheet-rolltemplate-ironcrunch_progress
   div.sheet-roll-container
-    | {{#vow}}
-    +vowHeader 
-    +vowBody
-    | {{#rollGreater() vow challenge1}}
+    | {{#progress}}
+    +progressHeader 
+    +progressBody
+    | {{#rollGreater() progress challenge1}}
     | {{#rollTotal() challenge1 challenge2}}
     +opportunity
     | {{/rollTotal() challenge1 challenge2}}
     | {{#^rollTotal() challenge1 challenge2}}
-    | {{#rollGreater() vow challenge2}}
+    | {{#rollGreater() progress challenge2}}
     +strongHit
-    | {{/rollGreater() vow challenge2}}
-    | {{#^rollGreater() vow challenge2}}
+    | {{/rollGreater() progress challenge2}}
+    | {{#^rollGreater() progress challenge2}}
     +weakHit
-    | {{/^rollGreater() vow challenge2}}
+    | {{/^rollGreater() progress challenge2}}
     | {{/^rollTotal() challenge1 challenge2}}
-    | {{/rollGreater() vow challenge1}}
-    | {{#^rollGreater() vow challenge1}}
+    | {{/rollGreater() progress challenge1}}
+    | {{#^rollGreater() progress challenge1}}
     | {{#rollTotal() challenge1 challenge2}}
     +complication
     | {{/rollTotal() challenge1 challenge2}}
     | {{#^rollTotal() challenge1 challenge2}}
-    | {{#rollGreater() vow challenge2}}
+    | {{#rollGreater() progress challenge2}}
     +weakHit
-    | {{/rollGreater() vow challenge2}}
-    | {{#^rollGreater() vow challenge2}}
+    | {{/rollGreater() progress challenge2}}
+    | {{#^rollGreater() progress challenge2}}
     +miss
-    | {{/^rollGreater() vow challenge2}}
+    | {{/^rollGreater() progress challenge2}}
     | {{/^rollTotal() challenge1 challenge2}}
-    | {{/^rollGreater() vow challenge1}}
-    | {{/vow}}
+    | {{/^rollGreater() progress challenge1}}
+    | {{/progress}}
