--- a/Ironcrunch/src/roll-templates/template.styl
+++ b/Ironcrunch/src/roll-templates/template.styl
@@ -1,6 +1,6 @@
 @import './mixins/outcomes'
 sub-base(background, padding)
-  line-height 0.9em
+  line-height 1.3em
   font-style italic
   font-weight 900
   text-align left
@@ -46,7 +46,7 @@ name-base(align)
 .sheet-rolltemplate-ironcrunch_moves .sheet-roll-name
   name-base(right)
 
-.sheet-rolltemplate-ironcrunch_progress .sheet-vow-name
+.sheet-rolltemplate-ironcrunch_progress .sheet-progress-name
   name-base(left)
 
 .sheet-rolltemplate-ironcrunch_moves .sheet-roll-container,
@@ -78,7 +78,7 @@ name-base(align)
 
 .sheet-rolltemplate-ironcrunch_moves .sheet-subheader,
 .sheet-rolltemplate-ironcrunch_progress .sheet-subheader
-  sub-base(#23222b, 0.4em 0em 0.4em 1em)
+  sub-base(#23222b, 0.4em 1em 0.4em 1em)
 
 .sheet-rolltemplate-ironcrunch_moves .sheet-subfooter,
 .sheet-rolltemplate-ironcrunch_progress .sheet-subfooter
