--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -1,4 +1,8 @@
-// .sheet-character-details
+.sheet-pc-name
+  &:focus
+    outline 3px solid #ffdd00
+    outline-offset 0s
+    box-shadow inset 0 0 0 2px
 
 .sheet-details-row
   display flex
