--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -1,18 +1,34 @@
 - 
-  var pages = [
-    { id: '1', text: 'Summary', checked: true },
-    { id: '2', text: 'Vows' },
-    { id: '3', text: 'Motivations' },
-    { id: '4', text: 'Bonds' },
-    { id: '5', text: 'Proficiencies' }
+  var rows = [
+    { 
+      pages: [
+        { id: '1', text: 'Summary', checked: true },
+        { id: '2', text: 'Vows' },
+        { id: '3', text: 'Motivations' },
+        { id: '4', text: 'Bonds' },
+        { id: '5', text: 'Proficiencies' },
+        { id: '6', text: 'Conditions' }
+      ]
+    },
+    {
+      pages: [
+        { id: '7', text: 'Equipment' },
+        { id: '8', text: 'Assets' },
+        { id: '9', text: 'Effort' },
+        { id: '10', text: 'Moves' },
+        { id: '11', text: 'Progress' }
+      ]
+    }
   ]
 
 div.sheet-nav-bar
-  each page in pages 
-    div.sheet-nav-child
-      label.sheet-page-label
-        if page.checked
-          input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id checked)
-        else
-          input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id)
-        div.sheet-page-button-back=page.text
+  each row in rows
+    div.sheet-nav-row
+      each page in row.pages 
+        div.sheet-nav-child
+          label.sheet-page-label
+            if page.checked
+              input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id checked)
+            else
+              input(type='radio' name='attr_character_page_button' class='sheet-hide sheet-page-button' value=page.id)
+            div.sheet-page-button-back=page.text
