--- a/Ironcrunch/src/components/notes/notes.pug
+++ b/Ironcrunch/src/components/notes/notes.pug
@@ -1,4 +1,4 @@
 div
   h3(class='sheet-divide' style='margin-top: 1em;') NOTES
   br
-  textarea(name='attr_sheet-notes')
+  textarea(class="sheet-note-area" name='attr_sheet-notes')
