--- a/Ironcrunch/src/components/progress/progress.styl
+++ b/Ironcrunch/src/components/progress/progress.styl
@@ -35,20 +35,13 @@ input.sheet-progress-name
   cursor: pointer
   border: 2px solid #4C4D4F
   border-radius: 0
-
-.sheet-progress-input:hover
-  width: 40px
-  height: 40px
-  font-size: 22px
-  font-weight: bold
-  text-align: center
-  justify-content: center
-  align-items: center
-  padding: 2px 0px 0px 12px
-  background-color: #ccc
-  border: 2px solid #4C4D4F
-  border-radius: 0
-  transition: .5s ease;
+  &:hover
+    background-color: #ccc
+    transition .5s ease
+  &:focus
+    outline 3px solid #ffdd00
+    outline-offset 0s
+    box-shadow inset 0 0 0 2px
 
 // Ticks
 // TODO use div rather than ASCII characters
