--- a/Ironcrunch/src/pages/character/bonds.pug
+++ b/Ironcrunch/src/pages/character/bonds.pug
@@ -1,4 +1,6 @@
-input(type='radio' name='attr_character_page' class='sheet-bonds sheet-hide' value='4')
-div.sheet-bonds.sheet-showhide
-  h3.sheet-divide &emsp;BONDS&emsp;
-  include ../../components/bonds/track
+div.sheet-page-container
+  input(type='radio' name='attr_character_page' class='sheet-bonds sheet-hide' value='4')
+  div.sheet-carpet
+  div.sheet-bonds.sheet-showhide
+    h3.sheet-divide &emsp;BONDS&emsp;
+    include ../../components/bonds/track
