--- a/Ironcrunch/src/pages/character/motivations.pug
+++ b/Ironcrunch/src/pages/character/motivations.pug
@@ -1,4 +1,6 @@
-input(type='radio' name='attr_character_page' class='sheet-motivations sheet-hide' value='3')
-div.sheet-motivations.sheet-showhide
-  h3.sheet-divide &emsp;MOTIVATIONS&emsp;
-  include ../../components/motivations/motivations
+div.sheet-page-container
+  input(type='radio' name='attr_character_page' class='sheet-motivations sheet-hide' value='3')
+  div.sheet-carpet
+  div.sheet-motivations.sheet-showhide
+    h3.sheet-divide &emsp;MOTIVATIONS&emsp;
+    include ../../components/motivations/motivations
