--- a/Ironcrunch/src/pages/character/summary.pug
+++ b/Ironcrunch/src/pages/character/summary.pug
@@ -1,6 +1,8 @@
-input(type='radio' name='attr_character_page' class='sheet-summary sheet-hide' value='1' checked)
-div.sheet-summary.sheet-showhide
-  include ../../components/stats/character
-  include ../../components/details/character
-  include ../../components/misses/track
-  include ../../components/notes/notes
+div.sheet-page-container
+  input(type='radio' name='attr_character_page' class='sheet-summary sheet-hide' value='1' checked)
+  div.sheet-carpet
+  div.sheet-summary.sheet-showhide
+    include ../../components/stats/character
+    include ../../components/details/character
+    include ../../components/misses/track
+    include ../../components/notes/notes
