--- a/Ironcrunch/src/pages/character/vows.pug
+++ b/Ironcrunch/src/pages/character/vows.pug
@@ -1,4 +1,6 @@
-input(type='radio' name='attr_character_page' class='sheet-vows sheet-hide' value='2')
-div.sheet-vows.sheet-showhide
-  h3.sheet-divide &emsp;VOWS&emsp;
-  include ../../components/vows/vows
+div.sheet-page-container
+  input(type='radio' name='attr_character_page' class='sheet-vows sheet-hide' value='2')
+  div.sheet-carpet
+  div.sheet-vows.sheet-showhide
+    h3.sheet-divide &emsp;VOWS&emsp;
+    include ../../components/vows/vows
