add speciality, clock for tensions and World of Lies specific roles.

--- a/WorldOfLies/style.css
+++ b/WorldOfLies/style.css
@@ -28,6 +28,10 @@ li {
 	display: inline-block;
 	width: auto;
 }
+.sheet-col {
+	width: 100%;
+}
+
 .charsheet .sheet-maindiv .sheet-col label.sheet-harm {
 	padding-right: 0;
 }
@@ -308,6 +312,58 @@ input.sheet-showhide:checked ~ .sheet-subbox {display: none;}
     background-color: black;
 }
 
+/* TENSION CLOCK */
+.sheet-tension-section {
+    display: inline-block;
+    text-align: center;
+}
+
+.sheet-tension-clock {
+    width: 5em;
+    height: 5em;
+    display: inline-block;
+    border-radius: 50%;
+    background: black;
+    border: 2px solid black;
+}
+
+.sheet-tension-checkbox{
+    margin-left: 5px;
+    margin-right: 4px;
+}
+
+.sheet-tension-checkbox.sheet-tension-0:checked ~ .sheet-tension-clock {
+    background: white;
+}
+
+.sheet-tension-checkbox.sheet-tension-3:checked ~ .sheet-tension-clock {
+    background-image: linear-gradient(180deg, transparent 50%, white 50%),
+                      linear-gradient(90deg, white 50%, transparent 50%);
+}
+
+.sheet-tension-checkbox.sheet-tension-6:checked ~ .sheet-tension-clock {
+    background-image: linear-gradient(90deg, white 50%, transparent 50%);
+}
+
+.sheet-tension-checkbox.sheet-tension-9:checked ~ .sheet-tension-clock {
+    background-image: linear-gradient(180deg, transparent 50%, black 50%),
+                      linear-gradient(90deg, white 50%, transparent 50%);
+}
+
+.sheet-tension-checkbox.sheet-tension-10:checked ~ .sheet-tension-clock {
+    background-image: linear-gradient(210deg, transparent 50%, black 50%),
+                      linear-gradient(90deg, white 50%, transparent 50%);
+}
+
+.sheet-tension-checkbox.sheet-tension-11:checked ~ .sheet-tension-clock {
+    background-image: linear-gradient(240deg, transparent 50%, black 50%),
+                      linear-gradient(90deg, white 50%, transparent 50%);
+}
+
+.sheet-tension-checkbox.sheet-tension-12:checked ~ .sheet-tension-clock {
+    background-color: black;
+}
+
 /* FOOD CLOCK (LandfallMarine) */
 
 .sheet-food-section {
@@ -544,15 +600,14 @@ input.sheet-showhide:checked ~ .sheet-subbox {display: none;}
 
 
 .sheet-rolltemplate-aw td {
-    padding-left: 20px;
-    font-size: 1.0em;
+    font-size: 0.8em;
     vertical-align: top;
+    padding-left: 15px;
 }
 
 .sheet-rolltemplate-aw .sheet-result {
-    font-size: 2em;
+    font-size: 1em;
     text-align: center;
-    padding-bottom: 20px;
 }
 
 .sheet-rolltemplate-aw .inlinerollresult,
@@ -562,6 +617,7 @@ input.sheet-showhide:checked ~ .sheet-subbox {display: none;}
     background-color: transparent;
     color: #000000;
     border: none;
+    text-align: center;
 }
 
 .sheet-rolltemplate-aw .sheet-success .inlinerollresult,
@@ -571,6 +627,7 @@ input.sheet-showhide:checked ~ .sheet-subbox {display: none;}
     background-color: transparent;
     color: #3FB315;
     border: none;
+    text-align: center;
 }
 
 .sheet-rolltemplate-aw .sheet-failure .inlinerollresult,
@@ -580,6 +637,7 @@ input.sheet-showhide:checked ~ .sheet-subbox {display: none;}
     background-color: transparent;
     color: #B31515;
     border: none;
+    text-align: center;
 }
 
 /* fix some display bugs */
