Tried to add titles back to checkboxes by using styling instead of moving every single title to the label element

--- a/AD&D 2E Revised/2EStyle.css
+++ b/AD&D 2E Revised/2EStyle.css
@@ -456,6 +456,7 @@ input.sheet-tab + span::before
 }
 
 label {
+    position: relative;
     display:inline;
     font-size: 12px;
     line-height:1em;
@@ -1166,7 +1167,10 @@ button {
 label input[type="radio"],
 label input[type="checkbox"] {
     position: absolute;
-    width: 0;
-    height: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0;
+    left: 0;
+    top: 0;
+    margin: 0;
 }
