updated fonts to include weights

--- a/Ironcrunch/src/components/motivations/motivations.styl
+++ b/Ironcrunch/src/components/motivations/motivations.styl
@@ -9,6 +9,7 @@ for id in motivations
     display flex
     justify-content space-evenly
     margin-top 1em
+    flex-wrap: wrap;
 
 .sheet-motivation
   width 17em
@@ -17,6 +18,7 @@ for id in motivations
   p
     font-size 14px
     line-height 16px
+    font-weight 500
 
 .sheet-motivation-dropdown
   border 2px solid #4c4d4f
