--- a/Ironcrunch/src/components/proficiencies/proficiencies.styl
+++ b/Ironcrunch/src/components/proficiencies/proficiencies.styl
@@ -13,4 +13,5 @@
 .sheet-proficiency-text
   font-size 14px
   margin-left 0.6em
-  font-family: 'Crimson Text', Verdana, arial, sans-serif
+  font-family 'Crimson Text', Verdana, arial, sans-serif
+  font-weight 600
