--- a/Ironcrunch/src/components/resources/resources.styl
+++ b/Ironcrunch/src/components/resources/resources.styl
@@ -48,7 +48,7 @@ h3.sheet-health-max-value
   width auto
   border 2px solid #4C4D4F
   line-height 9px
-  padding 0.5em
+  padding 0.5em 0.43em 0.5em 0.43em
 
 input[type=text].sheet-resource-value
   width 22px
