--- a/Ironcrunch/src/components/vows/vows.pug
+++ b/Ironcrunch/src/components/vows/vows.pug
@@ -1,5 +1,5 @@
 - var track = [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
-- var difficulties = { 1:'Troublesome', 2: 'Dangerous', 3: 'Formidable', 4: 'Extreme', 5: 'Epic' }
+- var difficulties = { 1:{ text: 'Troublesome', checked: true }, 2:{ text: 'Dangerous' }, 3:{ text: 'Formidable' }, 4:{ text: 'Extreme'}, 5:{ text: 'Epic' }}
 
 mixin progressBox
   option(value="0" selected)
@@ -13,8 +13,12 @@ div.sheet-vows
     input(type="text" class="sheet-vow-name" name="attr_vow_name")
     div.sheet-vows-header
       each difficulty, index in difficulties
-        input(type="radio" name="attr_vow_rank" value=index)
-        h5=difficulty
+        label.sheet-difficulty
+          if difficulty.checked
+            input(type="radio" class="sheet-hide" name="attr_vow_rank" value=index checked)
+          else
+            input(type="radio" class="sheet-hide" name="attr_vow_rank" value=index)
+          h5=difficulty.text
 
     div.sheet-vow
       div
@@ -40,6 +44,6 @@ div.sheet-vows
           value="floor((@{vow-0}+@{vow-1}+@{vow-2}+@{vow-3}+@{vow-4}+@{vow-5}+@{vow-6}+@{vow-7}+@{vow-8}+@{vow-9})/4)"
           disabled
         )
-  h3 Vow Archive
-  fieldset.repeating_vowarchive
-    span(name="attr_vow_name")
+  //- h3 Vow Archive
+  //- fieldset.repeating_vowarchive
+  //-   span(name="attr_vow_name")
