--- a/Ironcrunch/src/components/vows/vows.styl
+++ b/Ironcrunch/src/components/vows/vows.styl
@@ -50,8 +50,20 @@ input.sheet-vow-name
   font-weight: bold
   font-size: 14px
   padding 0
-  margin 1em
+  margin 0.5em
   height 40px
   padding 0.2em 0.2em 0.2em 0.2em
   border: 2px solid #494a4c
   cursor: pointer
+
+.sheet-difficulty
+  border: 2px solid #494a4c
+  margin 0.2em 0.5em 0.2em 0.5em
+  padding 0
+  cursor pointer
+  h5
+    text-align center
+  input
+    &:checked ~ h5
+      background #494a4c
+      color white
