--- a/Ironcrunch/src/pages/character/index.pug
+++ b/Ironcrunch/src/pages/character/index.pug
@@ -10,6 +10,15 @@ include ./vows
 include ./motivations
 include ./bonds
 include ./proficiencies
+include ./conditions
+include ./equipment
+include ./assets
+include ./effort
+include ./moves
+include ./progress
+include ./oracles
+include ./settings
+
 
 //- Footer
 include ../../components/momentum/momentum
