--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -1,6 +1,6 @@
 // Fonts
 @css {
-  @import url('https://fonts.googleapis.com/css?family=Montserrat|Crimson+Text|Roboto&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900|Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700|Roboto&display=swap');
 }
 
 // Sheet Core
@@ -9,6 +9,10 @@
   margin 0 auto !important
   padding 15px
   font-family: Montserrat, arial, sans-serif
+  font-weight: 600;
+
+input[type=text]
+  font-weight: 600;
 
 select
   -webkit-appearance: none
