--- a/Ironcrunch/src/components/details/details.styl
+++ b/Ironcrunch/src/components/details/details.styl
@@ -30,6 +30,11 @@
     border 0
     padding 0
     outline-width: 0px;
+    &::placeholder
+      font-weight 500
+      
+
+      
 
 .sheet-detail-columns
   display flex
