--- a/Ironcrunch/src/components/nav/character.pug
+++ b/Ironcrunch/src/components/nav/character.pug
@@ -6,17 +6,19 @@
         { id: '2', text: 'Vows' },
         { id: '3', text: 'Motivations' },
         { id: '4', text: 'Bonds' },
-        { id: '5', text: 'Proficiencies' },
+        { id: '11', text: 'Progress' },
         { id: '6', text: 'Conditions' }
       ]
     },
     {
       pages: [
         { id: '7', text: 'Equipment' },
+        { id: '5', text: 'Proficiencies' },
         { id: '8', text: 'Assets' },
         { id: '9', text: 'Effort' },
         { id: '10', text: 'Moves' },
-        { id: '11', text: 'Progress' }
+        { id: '12', text: 'Oracles' },
+        { id: '13', text: 'Settings' }
       ]
     }
   ]
