--- a/Ironcrunch/src/components/nav/nav-bar.styl
+++ b/Ironcrunch/src/components/nav/nav-bar.styl
@@ -8,6 +8,7 @@
   border 2px solid #4C4D4F
   width 100%
   text-align-last center
+  margin: 0.1em;
   label
     margin 0
     padding 0
@@ -18,6 +19,7 @@
 
 .sheet-page-button-back
   padding 0.1em 0em 0.1em 0em
+  font-weight 600
 
 .sheet-page-button:checked ~ div.sheet-page-button-back
   background #4C4D4F
@@ -28,7 +30,15 @@ input[type=radio].sheet-bonds:checked ~ div.sheet-bonds,
 input[type=radio].sheet-summary:checked ~ div.sheet-summary,
 input[type=radio].sheet-motivations:checked ~ div.sheet-motivations,
 input[type=radio].sheet-vows:checked ~ div.sheet-vows,
-input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies
+input[type=radio].sheet-proficiencies:checked ~ div.sheet-proficiencies,
+input[type=radio].sheet-conditions:checked ~ div.sheet-conditions,
+input[type=radio].sheet-equipment:checked ~ div.sheet-equipment,
+input[type=radio].sheet-assets:checked ~ div.sheet-assets,
+input[type=radio].sheet-effort:checked ~ div.sheet-effort,
+input[type=radio].sheet-moves:checked ~ div.sheet-moves,
+input[type=radio].sheet-progress:checked ~ div.sheet-progress,
+input[type=radio].sheet-oracles:checked ~ div.sheet-oracles,
+input[type=radio].sheet-settings:checked ~ div.sheet-settings
   display block
   opacity 1
   height: auto;
