Added floating button to activate Salvo Mode

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -488,10 +488,59 @@ select.sheet-typeSelector
 	font-size: 11px;
 }
 
+/* Salvo Mode Button */
+.sheet-salvoRollButton
+{
+	position: absolute;
+	top: 170px;
+	left: 0;
+}
+
+input[type="checkbox"].sheet-hideSalvoModeCheckbox
+{
+	
+	opacity: 0;
+	cursor: pointer;
+	z-index: 19;
+	width: 25px;
+	height: 200px;
+	margin: 0;
+	padding: 0;
+	font-size: 25px;
+	vertical-align: top;
+}
+
+span.sheet-salvoMode
+{
+	z-index: 18;
+	width: 25px;
+	height: 200px;
+	vertical-align: top;
+}
+
+/* Inactive Salvo Mode Button*/
+input.sheet-salvoRollButton + span.sheet-salvoMode
+{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/sys-int.png);
+	background-repeat: repeat;
+	background-position: top;
+	opacity: 1;
+	background-size: 25px 25px;
+}
+/* Active Salvo Mode Button*/
+input.sheet-salvoRollButton:checked + span.sheet-salvoMode
+{
+	background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Free%20Spacer/images/sys-int2.png);
+	background-repeat: repeat;
+	background-position: top;
+	opacity: 1;
+	background-size: 25px 25px;
+}
+
 /* Salvo Widget */
 .sheet-salvo
 {
-	position:absolute;
+	position: absolute;
 	z-index: 10;
 	display: grid;
 	width: 900px;
@@ -546,7 +595,19 @@ select.sheet-typeSelector
 	justify-self: center;
 }
 
-/* Specialty Hidding Functionality */
+/* Salvo Mode Hiding Functionality */
+div.sheet-salvo
+{
+	display: none;
+}
+
+input[type="checkbox"].sheet-salvoRollButton:checked ~ div.sheet-salvo
+{
+	display: grid;
+}
+
+
+/* Specialty Hiding Functionality */
 option.sheet-specialtyChoice
 {
 	display: none;
@@ -568,7 +629,7 @@ input.sheet-fieldDynamicsSelector:checked ~ div.sheet-capitalShipSheet
 	display: block;
 }
 
-/* Tool Hidding Functionality */
+/* Tool Hiding Functionality */
 optgroup.sheet-scaleChoice
 {
 	display: none;
