added border for text area

--- a/Ironcrunch/src/Ironcrunch.styl
+++ b/Ironcrunch/src/Ironcrunch.styl
@@ -144,12 +144,13 @@ button[type="roll"]:hover
 hr
   border: 0
   height: 1px
-  background: #ccc
+  background #ccc
   background-image: linear-gradient(to right, #ccc, #333, #ccc)
 
 textarea
   font-family 'Crimson Text', arial, sans-serif
-  max-width 830px;
+  max-width 828px
+  border: 2px solid #4C4D4F
 
 // Pages
 @import './pages/index'
