remove unused aggravateddot styling (replaced by healthbox)

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.css
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.css
@@ -1038,8 +1038,7 @@ input.sheet-zero:hover + span::before {
 
 .sheet-variablecontainer input[type="radio"].sheet-whitedot,
 .sheet-variablecontainer input[type="radio"].sheet-bashingdot,
-.sheet-variablecontainer input[type="radio"].sheet-lethaldot,
-.sheet-variablecontainer input[type="radio"].sheet-aggravateddot
+.sheet-variablecontainer input[type="radio"].sheet-lethaldot
 {
     pointer-events: auto;
 }
@@ -1133,36 +1132,12 @@ input.sheet-zero:hover + span::before {
            rgba(0,0,0,0) 100%);
 }
 
-.sheet-variablecontainer .sheet-healthboxcontainer input[type="radio"].sheet-aggravateddot:checked + span::before
-{
-    background:
-        linear-gradient(to top left,
-           rgba(0,0,0,0) 0%,
-           rgba(0,0,0,0) calc(50% - 0.8px),
-           rgba(0,0,0,1) 50%,
-           rgba(0,0,0,0) calc(50% + 0.8px),
-           rgba(0,0,0,0) 100%),
-       linear-gradient(to top right,
-           rgba(0,0,0,0) 0%,
-           rgba(0,0,0,0) calc(50% - 0.8px),
-           rgba(0,0,0,1) 50%,
-           rgba(0,0,0,0) calc(50% + 0.8px),
-           rgba(0,0,0,0) 100%),
-        linear-gradient(to right,
-           rgba(0,0,0,0) 0%,
-           rgba(0,0,0,0) calc(50% - 0.8px),
-           rgba(0,0,0,1) 50%,
-           rgba(0,0,0,0) calc(50% + 0.8px),
-           rgba(0,0,0,0) 100%);
-}
-
 .sheet-variablecontainer .sheet-healthboxcontainer input[type="radio"].sheet-whitedot {
     z-index: 102;
 }
 
 input.sheet-whitedot:checked ~ input.sheet-bashingdot,
-input.sheet-bashingdot:checked ~ input.sheet-lethaldot,
-input.sheet-lethaldot:checked ~ input.sheet-aggravateddot {
+input.sheet-bashingdot:checked ~ input.sheet-lethaldot {
     z-index: 103;
 }
 
@@ -1172,8 +1147,7 @@ input.sheet-lethaldot:checked ~ input.sheet-aggravateddot {
 
 input.sheet-whitedot:checked ~ span.sheet-whitedot,
 input.sheet-bashingdot:checked ~ span.sheet-bashingdot,
-input.sheet-lethaldot:checked ~ span.sheet-lethaldot,
-input.sheet-aggravateddot:checked ~ span.sheet-aggravateddot {
+input.sheet-lethaldot:checked ~ span.sheet-lethaldot {
     display: inline-block;
 }
 
