--- a/Outbreak/outbreak.pug
+++ b/Outbreak/outbreak.pug
@@ -6,6 +6,8 @@ input(name='attr_version' type='hidden' value='1.001')
 //- MIXINS
 include src/pug/_mixins.pug
 
+- const imageSrc = `https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img`;
+
 .container
 	input(name='attr_tab' type='hidden' value='main')
 	.main.tab
@@ -22,7 +24,7 @@ include src/pug/_mixins.pug
 					each val in ['Strength', 'Perception', 'Empathy', 'Willpower']
 						-const name = val.toLowerCase();
 						.grid.attributes
-							img(alt=`${val}` src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/OU_Attributes_${val}_40x40.png`)
+							img(alt=`${val}` src=`${imageSrc}/OU_Attributes_${val}_40x40.png`)
 							h3(data-i18n=val) #{val}
 							.grid
 								input(name=`attr_${name}` type='hidden' value=`[[(@{${name}_bonus}*10)+@{${name}_base}]]`)
@@ -63,7 +65,7 @@ include src/pug/_mixins.pug
 						each val,key in {'Bow':['perception', 'strength'], 'Calm Other':['empathy', 'willpower'], 'Persuade':['empathy', 'willpower'], 'Barter':['empathy', 'willpower'], 'Command':['empathy', 'willpower'], 'Detect Motives':['empathy', 'willpower'], 'Intimidate':['empathy', 'willpower'], 'Digital Systems':['perception', 'willpower']}
 							+skillList(key, val[0], val[1])
 					.skill-column
-						each val,key in {'Pistol':['perception', 'willpower'], 'Long Gun':['perception', 'willpower'], 'First Aid':['perception', 'willpower'], 'Blunt':['strength', 'willpower'], 'Pierce':['strength', 'willpower'], 'Slash':['strength', 'willpower'], 'Navigation':['perception', 'willpower'], 'Swim':['strength', 'willpower'], 'Throw':['perception', 'strength']}
+						each val,key in {'Long Gun':['perception', 'willpower'], 'Pistol':['perception', 'willpower'], 'First Aid':['perception', 'willpower'], 'Blunt':['strength', 'willpower'], 'Pierce':['strength', 'willpower'], 'Slash':['strength', 'willpower'], 'Navigation':['perception', 'willpower'], 'Swim':['strength', 'willpower'], 'Throw':['perception', 'strength']}
 							+skillList(key, val[0], val[1])
 
 					h2(data-i18n='Expert Skills') Expert Skills
@@ -108,23 +110,39 @@ include src/pug/_mixins.pug
 		
 		.column
 			.grid.box.logo
-				img(alt='Outbreak Character Sheet', src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/OU_Logo_340pxWx90pxH.png')
+				img(alt='Outbreak Character Sheet', src=`${imageSrc}/OU_Logo_340pxWx90pxH.png`)
 					
 			.grid.box.dice-box
 				button(data-i18n='Dice Pool' name='roll_Pool' type='roll' value='&{template:ou-small} {{Diff=@{difficulty_dice}}} {{Spd1=@{speed_dice}}} {{Dmg=@{damage_dice}}} {{Deplet=@{depletion_dice}}} {{DieDif=@{difficulty_die}}} {{DieSpd=@{speed_die}}} {{DieDmg=@{damage_die}}} {{DieDep=@{depletion_die}}}')
 
 				.die
-					img(alt='difficulty dice' src='https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/HuntersIcon_difficulty_16pxW_x16pxH.jpg' title='Difficult Dice')
+					img(alt='difficulty dice' src=`${imageSrc}/HuntersIcon_difficulty_16pxW_x16pxH.jpg` title='Difficult Dice')
 					select(name='attr_difficulty_dice')
 						- let n = 0;
 						while n < 6
-							option(data-i18n=n value=`[[${n}d6!p]]`) #{n}
+							option(data-i18n=n value=`[[${n}d6!pcs>6cf<0]]`) #{n}
 							- n++
 
-				each val in ['speed', 'damage', 'depletion']
-					.die
-						img(alt=`${val} dice` src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/HuntersIcon_${val}_16pxW_x16pxH.jpg`)
-						+diceSelect(`${val}`)
+				.die
+					img(alt=`speed dice` src=`${imageSrc}/HuntersIcon_speed_16pxW_x16pxH.jpg`)
+					+diceSelect(`speed`)
+				.die
+					img(alt=`damage dice` src=`${imageSrc}/HuntersIcon_damage_16pxW_x16pxH.jpg`)
+					select(name=`attr_${type}_dice`)
+						option(data-i18n='0' value='[[0d6]]')
+						option(data-i18n='1' value=`[[1d6!pcs>6cf<0]]`)
+						option(data-i18n='2' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='3' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='4' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='5' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='6' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='7' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='8' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+						option(data-i18n='9' value=`[[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]] [[1d6!pcs>6cf<0]]`)
+
+				.die
+					img(alt=`depletion dice` src=`${imageSrc}/HuntersIcon_depletion_16pxW_x16pxH.jpg`)
+					+diceSelect(`depletion`)
 
 				each val in ['difficulty', 'speed', 'damage', 'depletion']
 					.die
@@ -190,15 +208,18 @@ include src/pug/_mixins.pug
 						-const name = val.replace(' ', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
-							img(alt='' src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/KitIcons_${val.replace(' ', '')}_30x30.png`)
-							input(name=`attr_${name}` type='number' value='')
+							img(alt='' src=`${imageSrc}/KitIcons_${val.replace(' ', '')}_30x30.png`)
+							if (val === 'Long Gun' || val === 'Pistol')
+								input(name=`attr_${name}_tv` type='number' value='')
+							else
+								input(name=`attr_${name}` type='number' value='')
 
 				.grid.green-kits
 					each val in ['Athletic Gear', 'First Aid Kits', 'Swimming/Diving', 'Climbing Gear', 'Medical Gear', 'Tools', 'Command App', 'Recon Gear', 'Value', 'Firefighting', 'Survival Kit', 'Vehicles']
 						-const name = val.replace(/ /g, '_').replace('/', '_').toLowerCase();
 						.kits
 							h2(data-i18n=`${val}`) #{val}
-							img(alt='' src=`https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Outbreak/src/img/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
+							img(alt='' src=`${imageSrc}/KitIcons_${val.replace(/ /g, '').replace('/', '')}_30x30.png`)
 							input(name=`attr_${name}` type='number' value='')
 
 
