--- a/Outbreak/src/pug/_mixins.pug
+++ b/Outbreak/src/pug/_mixins.pug
@@ -10,12 +10,10 @@ mixin diceSelect(selectedDefault)
 mixin diceSelect(type)
 	select(name=`attr_${type}_dice`)
 		option(data-i18n='0' value='[[0d6]]')
-		option(data-i18n='1' value='[[1d6]]')
-		option(data-i18n='2' value='[[1d6]] [[1d6]]')
-		option(data-i18n='3' value='[[1d6]] [[1d6]] [[1d6]]')
-		option(data-i18n='4' value='[[1d6]] [[1d6]] [[1d6]] [[1d6]]')
-		option(data-i18n='5' value='[[1d6]] [[1d6]] [[1d6]] [[1d6]] [[1d6]]')
-
+		- let dieSelect = 1;
+		while dieSelect < 10
+			option(data-i18n=dieSelect value=`[[${dieSelect}d6!pcs>6cf<0]]`)
+			- dieSelect++
 
 mixin dieRadios(type)
 	input(name=`attr_${type}_die` type='radio' value='[[5d1]]' checked)
@@ -27,7 +25,7 @@ mixin dieRadios(type)
 mixin skillList(skill, primaryAttribute, secondaryAttribute)
 	.skill
 		-const name = skill.toLowerCase().replace('/', '_').replace(' ', '_');
-		input(name=`attr_${name}_button_base` type='hidden' value=`[[(?{Gear Or Kit| None, 0 | Archery, @{archery_gear}|Athletic Gear, @{athletic_gear}|Bludgeon, @{bludgeoning}|Climbing Gear, @{climbing_gear}|Command Apparatus, @{command_app}|Firefighting, @{firefighting}|First Aid Kit, @{first_aid_kits}|Long Gun, @{long_gun}|Martial Arts, @{martial_arts}|Medical Gear, @{medical_gear}|Piercing, @{piercing}|Pistol, @{pistol}|Recon Gear, @{recon_gear}|Slashing, @{slashing}|Survival Kit, @{survival_kit}|Swimming/Diving, @{swimming_diving}|Throwing, @{throwing}|Tools, @{tools}|Value, @{value}|Vehicles, @{vehicles}})*?{Multiplier|1|2|3|4|5}]]`)
+		input(name=`attr_${name}_button_base` type='hidden' value=`[[(?{Gear Or Kit | None, 0 | Archery, @{archery_gear}|Athletic Gear, @{athletic_gear}|Bludgeon, @{bludgeoning}|Climbing Gear, @{climbing_gear}|Command Apparatus, @{command_app}|Firefighting, @{firefighting}|First Aid Kit, @{first_aid_kits}|Long Gun, @{long_gun_tv}|Martial Arts, @{martial_arts}|Medical Gear, @{medical_gear}|Piercing, @{piercing}|Pistol, @{pistol_tv}|Recon Gear, @{recon_gear}|Slashing, @{slashing}|Survival Kit, @{survival_kit}|Swimming/Diving, @{swimming_diving}|Throwing, @{throwing}|Tools, @{tools}|Value, @{value}|Vehicles, @{vehicles}})*?{Multiplier|1|2|3|4|5}]]`)
 
 		input(name=`attr_${name}_attributes` type='hidden' value=`(@{${primaryAttribute}}+@{${secondaryAttribute}_bonus})`)
 			
